<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, IFM9Activity!</string>
    <string name="app_name">LM1</string>
    <string name="v1_tv_dir_path">Directory path</string>
    
    <!-- Generic items -->
	    <string name="generic_bt_ok">OK</string>
	    <string name="generic_cancel">Cancel</string>
	    <string name="generic_bt_back">Back</string>
	
	    <string name="generic_tv_confirm">確認</string>
	    <string name="generic_tv_menu">メニュー</string>
	    <string name="generic_tv_register">登録</string>
	    <string name="generic_tv_edit">編集</string>
	    <string name="generic_tv_delete">削除</string>
   		<string name="generic_tv_no_data">No data</string>
   		<string name="generic_bt_quit">終了</string>
   		<string name="generic_go">Go</string>

   		<string name="generic_ok">OK</string>
   		
	<!-- menu: actv_main -->
		<string name="menu_main_db">DB</string>
		<string name="menu_main_settings">Settings</string>
		<string name="menu_main_admin">Admin</string>
		
	<!-- dlg: menu main admin -->
		<string name="menu_main_admin_DB">DB</string>
		<string name="menu_main_admin_Ops">Ops</string>
		<string name="menu_main_admin_Log">Log</string>
		<string name="menu_main_admin_LAB">LAB</string>
		
	<!-- menu: actv_sensors -->
		<string name="menu_actv_sensors_accelero">Accelero</string>
		<string name="menu_actv_sensors_compass">Compass</string>
		
	<!-- dlg_db_admin.xml -->
	   	<string name="dlg_db_admin_title">DB Admin</string>
	   	<string name="dlg_db_admin_item_backup_db">Backup DB</string>
	   	<string name="dlg_db_admin_item_refresh_db">Refresh DB</string>
	   	<string name="dlg_db_admin_item_exec_sql">Exec sql</string>
	   	<string name="dlg_db_admin_item_restore_db">Restore DB</string>
	   	
	   	<string name="dlg_db_admin_item_create_table_locations">
	   	    							Create table: locations</string>
	   	<string name="dlg_db_admin_item_drop_table_locations">
	   	    							Drop table: locations</string>
	   	
	<!-- actv_main.xml -->
		<string name="actv_main_latitude">Lat</string>
		<string name="actv_main_longitude">Longi</string>
    
		<string name="actv_main_tv_get_data">Get data</string>
		<string name="actv_main_tv_save_data">Save data</string>
		<string name="actv_main_tv_post_data">Post data</string>
		<string name="actv_main_tv_show_map">Show map</string>	   	
		<string name="actv_main_tv_monitor">Monitor</string>	   	
		<string name="actv_main_tv_stop_monitor">Stop</string>	   	
		
		<string name="actv_main_tv_base">Base</string>	   	
		<string name="actv_main_tv_ref">Ref</string>	   	
		
	<!-- drop table -->
		<string name="drop_table_message">Drop table?</string>
		<string name="drop_table_locations">locations</string>
		
	<!-- dlg_edit_locs.xml -->
		<string name="dlg_edit_locs_title">Edit Location</string>
		<string name="dlg_edit_locs_memo_title">Memo</string>
		<string name="dlg_edit_locs_date_title">Date</string>
	
	<!-- dlg: mainactv_list -->
		<string name="dlg_mainactv_list_title">Actions</string>
		<string name="dlg_mainactv_list_opt_set_base">
		    							Set as base</string>
		<string name="dlg_mainactv_list_opt_show_distance">
		    							Show distance from base</string>
		<string name="dlg_mainactv_list_opt_delete">
		    							Delete</string>
		<string name="dlg_mainactv_list_opt_set_ref">
		    							Set as ref</string>
		
	<!-- preferences.xml -->
		<string name="prefs_title_bgm">Use BGM</string>
		<string name="prefs_key_bgm">prefs_key_bgm</string>
		<string name="prefs_title_distbuff">Distance buffer (m)</string>
		<string name="prefs_key_distbuff">prefs_key_distbuff</string>
		
	<!-- dlg: delete loc -->
		<string name="dlg_conf_del_loc_message">
		    						Delete loc?</string>	
	
	<!-- actv_sensors.xml -->
		<string name="actv_sensors_photo">Photo</string>
		<string name="actv_sensors_magnetic">Magnetic</string>
		<string name="actv_sensors_temp">Temp</string>
	
	<!-- actv_accelero.xml -->
		<string name="actv_accelero_bt_clear">Clear</string>
		<string name="actv_accelero_bt_go">Go</string>
		<string name="actv_accelero_ll_swipe">↑ MainActv ↓ Accelero</string>
	
</resources>