<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/dlg_edit_locs_tl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_gravity="center_horizontal">
        
		<TableRow >

	        <TextView
	            android:id="@+id/dlg_edit_locs_tv_date_label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:padding="5dp"
	            android:text="@string/dlg_edit_locs_date_title"
	            android:textColor="@color/white"
	            android:textSize="25sp" />

	        <TextView
	            android:id="@+id/dlg_edit_locs_tv_date_val"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:padding="5dp"
	            android:textColor="@color/white"
	            android:textSize="25sp" />

		</TableRow>

		<TableRow >

			<TextView
			    android:id="@+id/dlg_edit_locs_tv_longi_label"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:padding="5dp"
			    android:text="@string/actv_main_longitude"
			    android:textColor="@color/white"
			    android:textSize="25sp" />

			<TextView
			    android:id="@+id/dlg_edit_locs_tv_longi_val"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:padding="5dp"
			    android:textColor="@color/white"
			    android:textSize="25sp" />

		</TableRow>

		<TableRow >

	        <TextView
	            android:id="@+id/dlg_edit_locs_tv_lat_label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:padding="5dp"
	            android:text="@string/actv_main_latitude"
	            android:textColor="@color/white"
	            android:textSize="25sp" />

	        <TextView
	            android:id="@+id/dlg_edit_locs_tv_lat_val"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:padding="5dp"
	            android:textColor="@color/white"
	            android:textSize="25sp" />

	    </TableRow>

	    <TableRow >	

	        <TextView
	            android:id="@+id/dlg_edit_locs_tv_memo_label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@color/Arsenic"
	            android:gravity="center_horizontal"
	            android:padding="5dp"
	            android:text="@string/dlg_edit_locs_memo_title"
	            android:textColor="@color/yello"
	            android:textSize="25sp" />
	
	        <EditText
	            android:id="@+id/dlg_edit_locs_tv_memo_val"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="3dp"
	            android:layout_weight="1"
	            android:gravity="top|left"
	            android:lines="3"
	            android:minWidth="200dp"
	            android:scrollHorizontally="true"
	            android:shadowColor="@color/Arsenic"
	            android:textSize="25sp" />

	    </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/dlg_edit_locs_btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/generic_bt_ok"
            android:textSize="25sp" />

        <Button
            android:id="@+id/dlg_edit_locs_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/generic_bt_cancel"
            android:textColor="@color/red"
            android:textSize="25sp" />

    </LinearLayout>    
</LinearLayout>