<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    
    android:id="@+id/actv_main_main_ll"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/actv_main_tl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/actv_main_tv_longi_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:background="@color/black"
                android:padding="10dp"
                android:text="@string/actv_main_longitude"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/actv_main_tv_longi_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:padding="10dp"
                android:textSize="25sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/actv_main_tv_lat_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:background="@color/black"
                android:padding="10dp"
                android:text="@string/actv_main_latitude"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/actv_main_tv_lat_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:padding="10dp"
                android:textSize="25sp" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <Button
                android:id="@+id/actv_main_bt_get_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/blue1"
                android:padding="5dp"
                android:text="@string/actv_main_tv_get_data"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/actv_main_bt_save_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/darkgreen"
                android:padding="5dp"
                android:text="@string/actv_main_tv_save_data"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <Button
                android:id="@+id/actv_main_bt_monitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/brown"
                android:padding="5dp"
                android:text="@string/actv_main_tv_monitor"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/actv_main_bt_show_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/gold2"
                android:padding="5dp"
                android:text="@string/actv_main_tv_show_map"
                android:textColor="@color/blue1"
                android:textSize="25sp" />

        </LinearLayout>

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/actv_main_bt_base"
                style="@style/bt_basic"
                android:layout_weight=".2"
                android:background="@color/white"
                android:text="@string/actv_main_tv_base"
                android:textColor="@color/blue1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/actv_main_tv_base_longi"
                        style="@style/tv_basic_bg_white"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textColor="@color/blue1" />

                    <TextView
                        android:id="@+id/actv_main_tv_base_lat"
                        style="@style/tv_basic_bg_white"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textColor="@color/blue1" />

                </LinearLayout>

                <TextView
                    android:id="@+id/actv_main_tv_base_memo"
                    style="@style/tv_basic_bg_white"
                    android:layout_width="fill_parent"
                    android:layout_weight="0.2"
                    android:text="TextView" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/actv_main_bt_ref"
                style="@style/bt_basic"
                android:layout_weight=".2"
                android:background="@color/white"
                android:text="@string/actv_main_tv_ref"
                android:textColor="@color/darkgreen" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/actv_main_tv_ref_longi"
                        style="@style/tv_basic_bg_white"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textColor="@color/darkgreen" />

                    <TextView
                        android:id="@+id/actv_main_tv_ref_lat"
                        style="@style/tv_basic_bg_white"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textColor="@color/darkgreen" />

                </LinearLayout>

                <TextView
                    android:id="@+id/actv_main_tv_ref_memo"
                    style="@style/tv_basic_bg_white"
                    android:layout_width="fill_parent"
                    android:text="TextView" />

            </LinearLayout>

        </TableRow>
    </TableLayout>

</LinearLayout>
